SVY-8524 The transparent glass below the dialog not showing correctly...

--- a/servoy_ngclient/war/css/servoy.css
+++ b/servoy_ngclient/war/css/servoy.css
@@ -213,6 +213,7 @@ div.svy-label-with-focus:focus{
 .modal-backdrop
 {
 	height: 100%;
+	position: fixed;
 }
 .svyPortalGridStyle .form-control[readonly]
 {
